syntax="proto3";
package proto;
import "google/api/annotations.proto";
import "model.proto";

message OrderRequest{
  OrderMain order_main=1;
}

message OrderResponse{
  string status=1;
  string message=2;
}
service Order{
  rpc NewOrder(OrderRequest) returns (OrderResponse){
    option (google.api.http) = {
      post : "/v1/orders"
      body : "order_main"
    };
  }
}